--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,2 @@
-#VITE_BACKEND_URL=https://hotelbookinngs.vercel.app
-VITE_BACKEND_URL=http://localhost:3001
-
+VITE_BACKEND_URL=https://hotelbookinngsbackend.vercel.app
 VITE_CURRENCY=€
